--- a/arch/arm/configs/potter_defconfig
+++ b/arch/arm/configs/potter_defconfig
@@ -2,6 +2,14 @@
 # Automatically generated file; DO NOT EDIT.
 # Linux/arm 3.18.31 Kernel Configuration
 #
+
+#
+#Optimus
+#
+CONFIG_IOSCHED_FIOPS=y
+CONFIG_IOSCHED_SIO=y
+CONFIG_IOSCHED_ZEN=y
+
 CONFIG_ARM=y
 CONFIG_ARM_HAS_SG_CHAIN=y
 CONFIG_NEED_SG_DMA_LENGTH=y
@@ -33,8 +41,8 @@ CONFIG_BUILDTIME_EXTABLE_SORT=y
 CONFIG_INIT_ENV_ARG_LIMIT=32
 CONFIG_CROSS_COMPILE=""
 # CONFIG_COMPILE_TEST is not set
-CONFIG_LOCALVERSION="-lineage"
-CONFIG_LOCALVERSION_AUTO=y
+CONFIG_LOCALVERSION="-Optimus-R1"
+# CONFIG_LOCALVERSION_AUTO is not set
 CONFIG_HAVE_KERNEL_GZIP=y
 CONFIG_HAVE_KERNEL_LZMA=y
 CONFIG_HAVE_KERNEL_XZ=y
