--- a/arch/arm/configs/optimus_defconfig
+++ b/arch/arm/configs/optimus_defconfig
@@ -2,6 +2,12 @@
 # Automatically generated file; DO NOT EDIT.
 # Linux/arm 3.18.31 Kernel Configuration
 #
+
+#Optimus
+CONFIG_IOSCHED_BFQ=y
+CONFIG_CGROUP_BFQIO=y
+CONFIG_HOMEBUTTON=y
+
 CONFIG_ARM=y
 CONFIG_ARM_HAS_SG_CHAIN=y
 CONFIG_NEED_SG_DMA_LENGTH=y
@@ -33,8 +39,8 @@ CONFIG_BUILDTIME_EXTABLE_SORT=y
 CONFIG_INIT_ENV_ARG_LIMIT=32
 CONFIG_CROSS_COMPILE=""
 # CONFIG_COMPILE_TEST is not set
-CONFIG_LOCALVERSION="-perf"
-CONFIG_LOCALVERSION_AUTO=y
+CONFIG_LOCALVERSION="-Optimus-R1"
+# CONFIG_LOCALVERSION_AUTO is not set
 CONFIG_HAVE_KERNEL_GZIP=y
 CONFIG_HAVE_KERNEL_LZMA=y
 CONFIG_HAVE_KERNEL_XZ=y
@@ -3684,6 +3690,21 @@ CONFIG_ION_MSM=y
 # CONFIG_DGAP is not set
 # CONFIG_GS_FPGABOOT is not set
 # CONFIG_GOLDFISH is not set
+
+#
+# Qualcomm Atheros Prima WLAN module
+#
+# CONFIG_PRIMA_WLAN is not set
+CONFIG_PRONTO_WLAN=y
+# CONFIG_PRIMA_WLAN_BTAMP is not set
+CONFIG_PRIMA_WLAN_LFR=y
+CONFIG_PRIMA_WLAN_OKC=y
+CONFIG_PRIMA_WLAN_11AC_HIGH_TP=y
+CONFIG_WLAN_FEATURE_11W=y
+CONFIG_QCOM_TDLS=y
+CONFIG_QCOM_VOWIFI_11R=y
+CONFIG_ENABLE_LINUX_REG=y
+CONFIG_WLAN_OFFLOAD_PACKETS=y
 
 #
 # Qualcomm MSM specific device drivers
