--- a/arch/arm/configs/optimus_defconfig
+++ b/arch/arm/configs/optimus_defconfig
@@ -7,6 +7,11 @@
 CONFIG_IOSCHED_BFQ=y
 CONFIG_CGROUP_BFQIO=y
 CONFIG_HOMEBUTTON=y
+CONFIG_IOSCHED_FIOPS=y
+CONFIG_IOSCHED_SIO=y
+CONFIG_IOSCHED_ZEN=y
+CONFIG_FB_MSM_MDSS_KCAL_CTRL=y
+CONFIG_SWEEP2SLEEP=y
 
 CONFIG_ARM=y
 CONFIG_ARM_HAS_SG_CHAIN=y
