--- a/arch/arm/configs/optimus_defconfig
+++ b/arch/arm/configs/optimus_defconfig
@@ -12,6 +12,7 @@ CONFIG_IOSCHED_SIO=y
 CONFIG_IOSCHED_ZEN=y
 CONFIG_FB_MSM_MDSS_KCAL_CTRL=y
 CONFIG_SWEEP2SLEEP=y
+CONFIG_WQ_POWER_EFFICIENT_DEFAULT=y
 
 CONFIG_ARM=y
 CONFIG_ARM_HAS_SG_CHAIN=y
@@ -625,7 +626,6 @@ CONFIG_DPM_WATCHDOG_TIMEOUT=60
 # CONFIG_APM_EMULATION is not set
 CONFIG_PM_OPP=y
 CONFIG_PM_CLK=y
-# CONFIG_WQ_POWER_EFFICIENT_DEFAULT is not set
 CONFIG_CPU_PM=y
 CONFIG_SUSPEND_TIME=y
 CONFIG_SUSPEND_TIME_TIMEKEEPING=y
