--- a/AnyKernel2/ramdisk/init.optimus.rc
+++ b/AnyKernel2/ramdisk/init.optimus.rc
@@ -10,6 +10,13 @@ on property:sys.boot_completed=1
     write /sys/module/wakeup/parameters/enable_timerfd_ws 0
     write /sys/module/wakeup/parameters/enable_netlink_ws 0
 
+    # Optimus Gov
+    write /sys/devices/system/cpu/cpu0/cpufreq/scaling_governor optimus
+    chown system system /sys/devices/system/cpu/cpufreq/optimus/sampling_rate
+    chmod 0644 /sys/devices/system/cpu/cpufreq/optimus/sampling_rate
+    write /sys/devices/system/cpu/cpufreq/optimus/sampling_rate 50000
+    chmod 0444 /sys/devices/system/cpu/cpufreq/optimus/sampling_rate
+
     # Set I/O Scheduler tweaks
     write /sys/block/mmcblk0/queue/read_ahead_kb 512
     write /sys/block/mmcblk0/bdi/min_ratio 5
