--- a/arch/arm/configs/potter_defconfig
+++ b/arch/arm/configs/potter_defconfig
@@ -602,8 +602,8 @@ CONFIG_BINFMT_SCRIPT=y
 # CONFIG_HAVE_AOUT is not set
 # CONFIG_BINFMT_MISC is not set
 CONFIG_COREDUMP=y
-CONFIG_COREDUMP_GZ=y
-CONFIG_COREDUMP_PERMISSION_HACK=y
+# CONFIG_COREDUMP_GZ is not set
+# CONFIG_COREDUMP_PERMISSION_HACK is not set
 
 #
 # Power management options
@@ -632,11 +632,10 @@ CONFIG_PM_CLK=y
 CONFIG_CPU_PM=y
 CONFIG_SUSPEND_TIME=y
 CONFIG_SUSPEND_TIME_TIMEKEEPING=y
-CONFIG_SUSPEND_WATCHDOG=y
-CONFIG_SUSPEND_WATCHDOG_TIMEOUT=60
+# CONFIG_SUSPEND_WATCHDOG is not set
 # CONFIG_PM_SYNC_BEFORE_SUSPEND is not set
 # CONFIG_QUICK_WAKEUP is not set
-CONFIG_SUSPEND_DEBUG=y
+# CONFIG_SUSPEND_DEBUG is not set
 CONFIG_ARCH_SUSPEND_POSSIBLE=y
 CONFIG_ARM_CPU_SUSPEND=y
 CONFIG_ARCH_HIBERNATION_POSSIBLE=y
@@ -1885,13 +1884,12 @@ CONFIG_UNIX98_PTYS=y
 # CONFIG_SERIAL_NONSTANDARD is not set
 # CONFIG_N_GSM is not set
 # CONFIG_TRACE_SINK is not set
-CONFIG_DEVMEM=y
-CONFIG_DEVKMEM=y
+# CONFIG_DEVMEM is not set
+# CONFIG_DEVKMEM is not set
 
 #
 # Serial drivers
 #
-CONFIG_SERIAL_EARLYCON=y
 # CONFIG_SERIAL_8250 is not set
 
 #
@@ -1901,10 +1899,8 @@ CONFIG_SERIAL_EARLYCON=y
 # CONFIG_SERIAL_MAX3100 is not set
 # CONFIG_SERIAL_MAX310X is not set
 CONFIG_SERIAL_CORE=y
-CONFIG_SERIAL_CORE_CONSOLE=y
 CONFIG_SERIAL_MSM_HS=y
-CONFIG_SERIAL_MSM_HSL=y
-CONFIG_SERIAL_MSM_HSL_CONSOLE=y
+# CONFIG_SERIAL_MSM_HSL is not set
 # CONFIG_SERIAL_SCCNXP is not set
 # CONFIG_SERIAL_SC16IS7XX is not set
 # CONFIG_SERIAL_ALTERA_JTAGUART is not set
@@ -2101,7 +2097,7 @@ CONFIG_GPIO_SYSFS=y
 # CONFIG_GPIO_EM is not set
 # CONFIG_GPIO_ZEVIO is not set
 CONFIG_GPIO_QPNP_PIN=y
-CONFIG_GPIO_QPNP_PIN_DEBUG=y
+# CONFIG_GPIO_QPNP_PIN_DEBUG is not set
 # CONFIG_GPIO_SCH311X is not set
 # CONFIG_GPIO_GRGPIO is not set
 
@@ -2825,9 +2821,8 @@ CONFIG_FB_MSM_MDSS_HDMI_PANEL=y
 # CONFIG_FB_MSM_MDSS_DSI_CTRL_STATUS is not set
 # CONFIG_FB_MSM_MDSS_EDP_PANEL is not set
 # CONFIG_FB_MSM_MDSS_MDP3 is not set
-CONFIG_FB_MSM_MDSS_XLOG_DEBUG=y
+# CONFIG_FB_MSM_MDSS_XLOG_DEBUG is not set
 # CONFIG_FB_MSM_MDSS_PANEL_STATS_OPR is not set
-CONFIG_FB_MSM_MDSS_XLOG_MMI=y
 # CONFIG_FB_SSD1307 is not set
 CONFIG_MOD_DISPLAY=y
 CONFIG_BACKLIGHT_LCD_SUPPORT=y
@@ -3758,7 +3753,6 @@ CONFIG_QPNP_HAPTIC=y
 CONFIG_MSM_SPMI=y
 CONFIG_MSM_SPMI_PMIC_ARB=y
 CONFIG_MSM_QPNP_INT=y
-# CONFIG_MSM_SPMI_DEBUGFS_RO is not set
 
 #
 # SOC (System On Chip) specific Drivers
@@ -3784,7 +3778,7 @@ CONFIG_MSM_COMMON_LOG=y
 CONFIG_MSM_DDR_HEALTH=y
 # CONFIG_MSM_HYP_DEBUG is not set
 CONFIG_MSM_WATCHDOG_V2=y
-CONFIG_MSM_WATCHDOG_CTX_PRINT=y
+# CONFIG_MSM_WATCHDOG_CTX_PRINT is not set
 CONFIG_MSM_FORCE_WDOG_BITE_ON_PANIC=y
 # CONFIG_MSM_CORE_HANG_DETECT is not set
 # CONFIG_MSM_GLADIATOR_HANG_DETECT is not set
@@ -4131,7 +4125,7 @@ CONFIG_CORESIGHT_EVENT=y
 CONFIG_HAVE_CORESIGHT_SINK=y
 CONFIG_CORESIGHT_FUSE=y
 CONFIG_CORESIGHT_CTI=y
-# CONFIG_CORESIGHT_CTI_SAVE_DISABLE is not set
+CONFIG_CORESIGHT_CTI_SAVE_DISABLE=y
 CONFIG_CORESIGHT_CSR=y
 CONFIG_CORESIGHT_TMC=y
 CONFIG_CORESIGHT_TPIU=y
@@ -4165,7 +4159,7 @@ CONFIG_SENSORS_SSC=y
 #
 # CONFIG_FIRMWARE_MEMMAP is not set
 CONFIG_MSM_TZ_LOG=y
-CONFIG_MSM_TZ_LOG_WDOG_DUMP=y
+# CONFIG_MSM_TZ_LOG_WDOG_DUMP is not set
 # CONFIG_BIF is not set
 # CONFIG_MOBICORE_DRIVER is not set
 
@@ -4419,9 +4413,10 @@ CONFIG_PANIC_TIMEOUT=5
 CONFIG_PANIC_ON_RECURSIVE_FAULT=y
 # CONFIG_SCHED_DEBUG is not set
 # CONFIG_PANIC_ON_SCHED_BUG is not set
-CONFIG_PANIC_ON_RT_THROTTLING=y
+# CONFIG_PANIC_ON_RT_THROTTLING is not set
 CONFIG_SCHEDSTATS=y
 # CONFIG_SCHED_STACK_END_CHECK is not set
+CONFIG_TIMER_STATS=y
 CONFIG_DEBUG_PREEMPT=y
 
 #
