--- a/arch/arm/configs/potter_defconfig
+++ b/arch/arm/configs/potter_defconfig
@@ -10,8 +10,9 @@ CONFIG_IOSCHED_ZEN=y
 CONFIG_FB_MSM_MDSS_KCAL_CTRL=y
 CONFIG_WQ_POWER_EFFICIENT_DEFAULT=y
 CONFIG_CPU_FREQ_GOV_OPTIMUS=y
-CONFIG_SWEEP2SLEEP=y
 CONFIG_SOUND_CONTROL=y
+CONFIG_WAKE_GESTURES=y
+CONFIG_FINGERPRINT_BOOST=y
 
 CONFIG_ARM=y
 CONFIG_ARM_HAS_SG_CHAIN=y
