--- a/AnyKernel2/ramdisk/init.optimus.rc
+++ b/AnyKernel2/ramdisk/init.optimus.rc
@@ -1,7 +1,27 @@
 # Start Optimus changes
 # Many of these tweaks are thanks to AK, Franco,Nathan Chancellor & frap129.
 
+on early-init
+    write /sys/block/dm-0/queue/scheduler noop
+    write /sys/block/sda/queue/scheduler noop
+    write /sys/block/sde/queue/scheduler noop
+
+    write /sys/block/dm-0/queue/read_ahead_kb 2048
+    write /sys/block/sda/queue/read_ahead_kb 2048
+    write /sys/block/sde/queue/read_ahead_kb 2048
+
 on property:sys.boot_completed=1
+    # I/O
+    write /sys/block/dm-0/queue/rq_affinity 0
+    write /sys/block/sda/queue/rq_affinity 0
+    write /sys/block/sde/queue/rq_affinity 0    
+    write /sys/block/dm-0/queue/read_ahead_kb 128
+    write /sys/block/sda/queue/read_ahead_kb 128
+    write /sys/block/sde/queue/read_ahead_kb 128
+    write /sys/block/dm-0/queue/scheduler bfq
+    write /sys/block/sda/queue/scheduler bfq
+    write /sys/block/sde/queue/scheduler bfq
+
     # Disable some Wlan wakelocks
     write /sys/module/wakeup/parameters/enable_qcom_rx_wakelock_ws 0
     write /sys/module/wakeup/parameters/enable_wlan_extscan_wl_ws 0
@@ -10,16 +30,6 @@ on property:sys.boot_completed=1
     write /sys/module/wakeup/parameters/enable_timerfd_ws 0
     write /sys/module/wakeup/parameters/enable_netlink_ws 0
 
-    # Optimus Gov
-    write /sys/devices/system/cpu/cpu0/cpufreq/scaling_governor optimus
-    chown system system /sys/devices/system/cpu/cpufreq/optimus/sampling_rate
-    chmod 0644 /sys/devices/system/cpu/cpufreq/optimus/sampling_rate
-    write /sys/devices/system/cpu/cpufreq/optimus/sampling_rate 50000
-    chmod 0444 /sys/devices/system/cpu/cpufreq/optimus/sampling_rate
-
     # Enable Fingerprint boost
     write /sys/kernel/fp_boost/enabled 1
 
-    # Set I/O Scheduler tweaks
-    write /sys/block/mmcblk0/queue/read_ahead_kb 512
-    write /sys/block/mmcblk0/bdi/min_ratio 5
