--- a/arch/arm/configs/albus_defconfig
+++ b/arch/arm/configs/albus_defconfig
@@ -149,7 +149,7 @@ CONFIG_NAMESPACES=y
 CONFIG_NET_NS=y
 # CONFIG_SCHED_AUTOGROUP is not set
 # CONFIG_SYSFS_DEPRECATED is not set
-CONFIG_RELAY=y
+# CONFIG_RELAY is not set
 CONFIG_BLK_DEV_INITRD=y
 CONFIG_INITRAMFS_SOURCE=""
 CONFIG_RD_GZIP=y
@@ -252,7 +252,6 @@ CONFIG_OLD_SIGACTION=y
 #
 # CONFIG_GCOV_KERNEL is not set
 CONFIG_HAVE_GENERIC_DMA_COHERENT=y
-CONFIG_SLABINFO=y
 CONFIG_RT_MUTEXES=y
 CONFIG_BASE_SMALL=0
 CONFIG_MODULES=y
@@ -594,8 +593,8 @@ CONFIG_BINFMT_SCRIPT=y
 # CONFIG_HAVE_AOUT is not set
 # CONFIG_BINFMT_MISC is not set
 CONFIG_COREDUMP=y
-CONFIG_COREDUMP_GZ=y
-CONFIG_COREDUMP_PERMISSION_HACK=y
+# CONFIG_COREDUMP_GZ is not set
+# CONFIG_COREDUMP_PERMISSION_HACK is not set
 
 #
 # Power management options
@@ -625,11 +624,10 @@ CONFIG_PM_CLK=y
 CONFIG_CPU_PM=y
 CONFIG_SUSPEND_TIME=y
 CONFIG_SUSPEND_TIME_TIMEKEEPING=y
-CONFIG_SUSPEND_WATCHDOG=y
-CONFIG_SUSPEND_WATCHDOG_TIMEOUT=60
+# CONFIG_SUSPEND_WATCHDOG is not set
 # CONFIG_PM_SYNC_BEFORE_SUSPEND is not set
 # CONFIG_QUICK_WAKEUP is not set
-CONFIG_SUSPEND_DEBUG=y
+# CONFIG_SUSPEND_DEBUG is not set
 CONFIG_ARCH_SUSPEND_POSSIBLE=y
 CONFIG_ARM_CPU_SUSPEND=y
 CONFIG_ARCH_HIBERNATION_POSSIBLE=y
@@ -1338,7 +1336,7 @@ CONFIG_MODS_CODEC_BUS=y
 CONFIG_MODS_MODBUS_EXT=y
 CONFIG_HD3SS460_MUX=y
 CONFIG_USB3813=y
-CONFIG_USB3813_DEBUG=y
+# CONFIG_USB3813_DEBUG is not set
 CONFIG_FSUSB42_MUX=y
 # CONFIG_C2PORT is not set
 
@@ -1869,13 +1867,12 @@ CONFIG_UNIX98_PTYS=y
 # CONFIG_SERIAL_NONSTANDARD is not set
 # CONFIG_N_GSM is not set
 # CONFIG_TRACE_SINK is not set
-CONFIG_DEVMEM=y
-CONFIG_DEVKMEM=y
+# CONFIG_DEVMEM is not set
+# CONFIG_DEVKMEM is not set
 
 #
 # Serial drivers
 #
-CONFIG_SERIAL_EARLYCON=y
 # CONFIG_SERIAL_8250 is not set
 
 #
@@ -1885,10 +1882,8 @@ CONFIG_SERIAL_EARLYCON=y
 # CONFIG_SERIAL_MAX3100 is not set
 # CONFIG_SERIAL_MAX310X is not set
 CONFIG_SERIAL_CORE=y
-CONFIG_SERIAL_CORE_CONSOLE=y
 CONFIG_SERIAL_MSM_HS=y
-CONFIG_SERIAL_MSM_HSL=y
-CONFIG_SERIAL_MSM_HSL_CONSOLE=y
+# CONFIG_SERIAL_MSM_HSL is not set
 # CONFIG_SERIAL_SCCNXP is not set
 # CONFIG_SERIAL_SC16IS7XX is not set
 # CONFIG_SERIAL_ALTERA_JTAGUART is not set
@@ -2085,7 +2080,7 @@ CONFIG_GPIO_SYSFS=y
 # CONFIG_GPIO_EM is not set
 # CONFIG_GPIO_ZEVIO is not set
 CONFIG_GPIO_QPNP_PIN=y
-CONFIG_GPIO_QPNP_PIN_DEBUG=y
+# CONFIG_GPIO_QPNP_PIN_DEBUG is not set
 # CONFIG_GPIO_SCH311X is not set
 # CONFIG_GPIO_GRGPIO is not set
 
@@ -2824,9 +2819,8 @@ CONFIG_FB_MSM_MDSS_HDMI_PANEL=y
 # CONFIG_FB_MSM_MDSS_DSI_CTRL_STATUS is not set
 # CONFIG_FB_MSM_MDSS_EDP_PANEL is not set
 # CONFIG_FB_MSM_MDSS_MDP3 is not set
-CONFIG_FB_MSM_MDSS_XLOG_DEBUG=y
+# CONFIG_FB_MSM_MDSS_XLOG_DEBUG is not set
 # CONFIG_FB_MSM_MDSS_PANEL_STATS_OPR is not set
-CONFIG_FB_MSM_MDSS_XLOG_MMI=y
 # CONFIG_FB_SSD1307 is not set
 CONFIG_MOD_DISPLAY=y
 CONFIG_BACKLIGHT_LCD_SUPPORT=y
@@ -3793,7 +3787,7 @@ CONFIG_MSM_COMMON_LOG=y
 CONFIG_MSM_DDR_HEALTH=y
 # CONFIG_MSM_HYP_DEBUG is not set
 CONFIG_MSM_WATCHDOG_V2=y
-CONFIG_MSM_WATCHDOG_CTX_PRINT=y
+# CONFIG_MSM_WATCHDOG_CTX_PRINT is not set
 CONFIG_MSM_FORCE_WDOG_BITE_ON_PANIC=y
 # CONFIG_MSM_CORE_HANG_DETECT is not set
 # CONFIG_MSM_GLADIATOR_HANG_DETECT is not set
@@ -4141,7 +4135,7 @@ CONFIG_CORESIGHT_EVENT=y
 CONFIG_HAVE_CORESIGHT_SINK=y
 CONFIG_CORESIGHT_FUSE=y
 CONFIG_CORESIGHT_CTI=y
-# CONFIG_CORESIGHT_CTI_SAVE_DISABLE is not set
+CONFIG_CORESIGHT_CTI_SAVE_DISABLE=y
 CONFIG_CORESIGHT_CSR=y
 CONFIG_CORESIGHT_TMC=y
 CONFIG_CORESIGHT_TPIU=y
@@ -4175,7 +4169,7 @@ CONFIG_SENSORS_SSC=y
 #
 # CONFIG_FIRMWARE_MEMMAP is not set
 CONFIG_MSM_TZ_LOG=y
-CONFIG_MSM_TZ_LOG_WDOG_DUMP=y
+# CONFIG_MSM_TZ_LOG_WDOG_DUMP is not set
 # CONFIG_BIF is not set
 CONFIG_TRUSTONIC_TEE=y
 # CONFIG_TRUSTONIC_TEE_LPAE is not set
@@ -4432,9 +4426,10 @@ CONFIG_PANIC_TIMEOUT=5
 CONFIG_PANIC_ON_RECURSIVE_FAULT=y
 # CONFIG_SCHED_DEBUG is not set
 # CONFIG_PANIC_ON_SCHED_BUG is not set
-CONFIG_PANIC_ON_RT_THROTTLING=y
+# CONFIG_PANIC_ON_RT_THROTTLING is not set
 CONFIG_SCHEDSTATS=y
 # CONFIG_SCHED_STACK_END_CHECK is not set
+CONFIG_TIMER_STATS=y
 CONFIG_DEBUG_PREEMPT=y
 
 #
@@ -4452,7 +4447,6 @@ CONFIG_DEBUG_PREEMPT=y
 # CONFIG_LOCK_TORTURE_TEST is not set
 CONFIG_STACKTRACE=y
 # CONFIG_DEBUG_KOBJECT is not set
-# CONFIG_DEBUG_KOBJECT_RELEASE is not set
 CONFIG_DEBUG_BUGVERBOSE=y
 # CONFIG_DEBUG_LIST is not set
 # CONFIG_DEBUG_PI_LIST is not set
@@ -4484,8 +4478,7 @@ CONFIG_TRACE_CLOCK=y
 CONFIG_RING_BUFFER=y
 CONFIG_EVENT_TRACING=y
 CONFIG_CONTEXT_SWITCH_TRACER=y
-CONFIG_MSM_RTB=y
-CONFIG_MSM_RTB_SEPARATE_CPUS=y
+# CONFIG_MSM_RTB is not set
 CONFIG_IPC_LOGGING=y
 CONFIG_TRACING=y
 CONFIG_GENERIC_TRACER=y
@@ -4501,7 +4494,7 @@ CONFIG_BRANCH_PROFILE_NONE=y
 # CONFIG_PROFILE_ANNOTATED_BRANCHES is not set
 # CONFIG_PROFILE_ALL_BRANCHES is not set
 # CONFIG_STACK_TRACER is not set
-CONFIG_BLK_DEV_IO_TRACE=y
+# CONFIG_BLK_DEV_IO_TRACE is not set
 CONFIG_KPROBE_EVENT=y
 # CONFIG_UPROBE_EVENT is not set
 CONFIG_PROBE_EVENTS=y
@@ -4533,8 +4526,6 @@ CONFIG_CPU_FREQ_SWITCH_PROFILER=y
 # CONFIG_TEST_UDELAY is not set
 CONFIG_PANIC_ON_DATA_CORRUPTION=y
 # CONFIG_MEMTEST is not set
-CONFIG_SOFTLOCKUP_WATCHDOG_TEST=y
-CONFIG_LOCKUP_IPI_CALL_WDT=y
 # CONFIG_SAMPLES is not set
 CONFIG_HAVE_ARCH_KGDB=y
 # CONFIG_KGDB is not set
@@ -4543,8 +4534,8 @@ CONFIG_HAVE_ARCH_KGDB=y
 # CONFIG_STRICT_DEVMEM is not set
 CONFIG_ARM_UNWIND=y
 # CONFIG_DEBUG_USER is not set
-CONFIG_FORCE_PAGES=y
-CONFIG_FREE_PAGES_RDONLY=y
+# CONFIG_FORCE_PAGES is not set
+# CONFIG_FREE_PAGES_RDONLY is not set
 # CONFIG_DEBUG_LL is not set
 CONFIG_DEBUG_LL_INCLUDE="mach/debug-macro.S"
 # CONFIG_DEBUG_UART_PL01X is not set
